--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,6 @@
 </h1>
 <ul>
   <li *ngFor="let item of items | async">
-      {{ item.$value }}
+      {{item.$key}}: {{ item.$value }}
   </li>
 </ul>
